Fixed spacing between paragraphs.

--- a/main.less
+++ b/main.less
@@ -115,7 +115,7 @@ section{
   margin-left: 10%;
   width: 80%;
 }
-section p{
+section:last-child{
   margin-bottom: 4em;
 }
 section dl dt{
@@ -129,8 +129,6 @@ section dl dd p{
 }
 .emphasize{
   font-style: italic;
-}
-section ul{
 }
 
 #footer{
@@ -188,7 +186,7 @@ section ul{
 #profile-container p{
   display: inline-block;
   width: 50%;
-  margin: 2% 5% 5% 2%
+  margin: 2% 5% 2% 2%
 }
 #profile-container img + p{
   margin: 0 2% 0 2%;
@@ -315,4 +313,3 @@ section ul{
     border-radius: 2px 2px 0 0;
     box-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
-/* Deal with the ribbon somewhat */
